apps/sinatra/k8s/sinatra-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sinatraservice
  labels:
    app: sinatra
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 9292
  selector:
    app: sinatra
  type: ClusterIP
